--- a/env.example
+++ b/env.example
@@ -14,4 +14,10 @@ JOB_INTERVAL_MINUTES=2
 
 # Configurações do Servidor
 PORT=3000
-NODE_ENV=development 
+NODE_ENV=development
+
+# Configurações de Logging
+LOG_LEVEL=info
+# Níveis disponíveis: trace, debug, info, warn, error, fatal
+# Para desenvolvimento: info
+# Para produção: warn ou error 
