--- a/package.json
+++ b/package.json
@@ -11,28 +11,37 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
-  "keywords": ["fastify", "sequelize", "oracle", "dropsigner", "job", "typescript"],
+  "keywords": [
+    "fastify",
+    "sequelize",
+    "oracle",
+    "dropsigner",
+    "job",
+    "typescript"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^2.1.0",
-    "sequelize": "^6.35.0",
-    "oracledb": "^6.3.0",
-    "node-cron": "^3.0.3",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "node-cron": "^3.0.3",
+    "oracledb": "^6.3.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
-    "typescript": "^5.3.2",
-    "ts-node-dev": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   }
-} 
+}
