--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Job para processamento de assinaturas com DropSigner",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -34,6 +35,7 @@
     "sequelize": "^6.35.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
